fix scrollbar

--- a/css/ethplorer.css
+++ b/css/ethplorer.css
@@ -1393,22 +1393,21 @@ a.token-update {
     display: block;
     left: 0px;
     width: 100%;
-    height: 15px;
+    height: 60px;
 }
 .scrollwrapper.hide-bottom-gr:after{
     display: none;
 }
 .scrollwrapper:after{
     bottom: 0;
+    pointer-events: none;
     content: '';
-    background: rgba(252,252,252,0.7);
-    background: -moz-linear-gradient(bottom, rgba(252,252,252,0.7) 0%, rgba(242,242,242,0) 100%);
-    background: -webkit-gradient(left bottom, left top, color-stop(0%, rgba(252,252,252,0.7)), color-stop(100%, rgba(242,242,242,0)));
-    background: -webkit-linear-gradient(bottom, rgba(252,252,252,0.7) 0%, rgba(242,242,242,0) 100%);
-    background: -o-linear-gradient(bottom, rgba(252,252,252,0.7) 0%, rgba(242,242,242,0) 100%);
-    background: -ms-linear-gradient(bottom, rgba(252,252,252,0.7) 0%, rgba(242,242,242,0) 100%);
-    background: linear-gradient(to top, rgba(252,252,252,0.7) 0%, rgba(242,242,242,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#f2f2f2', GradientType=0 );
+    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,9));
+    background: -webkit-gradient(left bottom, left top, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,9)));
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,9));
+    background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,9));
+    background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,9));
+    background: linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,9));
 }
 /* ^^^ Scrollable ^^^ */
 
